--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="index.html">Software First Solutions</a>
+        </button> -->
+        <img src="img/sfs-logo.PNG" class="img-responsive" style="align:left">
+
+      
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
@@ -50,12 +52,12 @@
       <div class="row">
         <div class="banner-text text-center">
           <div class="text-border">
-            <h2 class="text-dec">Trust,Quality and Prefection</h2>
+            <h2 class="text-dec">Trust, Quality and Prefection in each Delivery</h2>
           </div>
           <div class="intro-para text-center quote">
-            <p class="big-text">Need a software solution to your business . . . Get it here.</p>
-            <p class="small-text">Web,Mobile,IOT ,Embedded and Marketting based solutions to your business problmes.</p>
-            <a href="#footer" class="btn get-quote">GET A QUOTE</a>
+            <p class="big-text">Need a <span style="color: #048c04">SOLUTION</span> to your business <span style="color: #f74646">PROBLEM</span> ? . . . Get it here.</p>
+            <p class="small-text">IOT, Web, Mobile, Embedded and Social Marketing solutions</p>
+            <a href="#footer" class="btn get-quote">Go For IT.</a>
           </div>
           <a href="#feature" class="mouse-hover">
             <div class="mouse"></div>
@@ -258,6 +260,7 @@
     <div class="row">
         <div class="header-section text-center">
           <h2>About Us</h2>
+          <hr class="bottom-line">
      <p> We provide smart ,affordable and innovative software solutions to your business needs.We are experts in web ,mobile,IOT ,embedded and online Marketting. </p>
     </div>
 </section>
@@ -267,8 +270,10 @@
       <div class="row">
         <div class="header-section text-center">
           <h2>Contact Us</h2>
-          
           <hr class="bottom-line">
+          <p> Write us at  <a href="mailto:admin@softwarefirstsolutions.com">admin@softwarefirstsolutions.com</a></p>
+          <div style="align-content: center;">OR</div>
+          <br>
         </div>
         <div id="sendmessage">Your message has been sent. Thank you!</div>
         <div id="errormessage"></div>
