--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button> -->
-        <img src="img/sfs-logo.PNG" class="img-responsive-header">
+        <img src="img/sfs.PNG" class="img-responsive-header">
 
       
       </div>
