email link added to go for it

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="intro-para text-center quote">
             <p class="big-text">Need a <span style="color: #048c04">SOLUTION</span> to your business <span style="color: #f74646">PROBLEM</span> ? . . . Get it here.</p>
             <p class="small-text">IOT, Web, Mobile, Embedded and Social Marketing solutions</p>
-            <a href="#footer" class="btn get-quote">Go For IT.</a>
+            <a href="mailto:admin@softwarefirstsolutions.com" class="btn get-quote">Go For IT.</a>
           </div>
           <a href="#feature" class="mouse-hover">
             <div class="mouse"></div>
